--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <input type="checkbox" id="debug">Debug?</input>
       </div>
     </div>
+    <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/pypy.js/lib/Promise.min.js" charset="utf-8"></script>
     <script src="js/pypy.js/lib/FunctionPromise.js" charset="utf-8"></script>
     <script src="js/pypy.js/lib/pypy.js" charset="utf-8"></script>
