Make the output field a textarea

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <textarea id="input" placeholder="Input text here"></textarea>
       </div>
       <div id="col2">
-        <span id="output">Output will be here</span>
+        <textarea id="output" readonly>Output will be here</textarea>
         <div id="buttons">
           <button id="run" onclick="run_code()">Run it!</button>
           <button id="link" onclick="make_link()">Link it!</button>
