Remove the 3rd column as suggested by @Maltysen
http://codegolf.stackexchange.com/questions/52502/write-a-program-that-finds-the-most-occurring-paired-letter-in-a-string/52517#comment125300_52517

--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
       </div>
       <div id="col2">
         <textarea id="output" readonly>Output will be here</textarea>
-        <div id="buttons">
+        <div id="controls">
           <button id="run" onclick="run_code()">Run it!</button>
           <button id="link" onclick="make_link()">Link it!</button>
+          <br/>
+          <input type="checkbox" id="debug">Debug?</input>
         </div>
-      </div>
-      <div id="col3">
-        <input type="checkbox" id="debug">Debug?</input>
       </div>
     </div>
     <script src="js/jquery-2.1.4.min.js"></script>
