Fixes for latest PyPy.js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/pypy.js/lib/Promise.min.js" charset="utf-8"></script>
     <script src="js/pypy.js/lib/FunctionPromise.js" charset="utf-8"></script>
-    <script src="js/pypy.js/lib/pypy.js" charset="utf-8"></script>
+    <script src="js/pypy.js/lib/pypyjs.js" charset="utf-8"></script>
     <script src="js/load.js"></script>
     <!-- Google Analytics -->
     <script>
